tests/diagnostics/statements/termination/return_missing_expression/expect.txt
# exit: 1
input/main.lang0:2:5: error: expected expression
      return
      ^
